2008-03-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* doctools.tcl: Code cleanup, giving all upvar commands an
	* docidx.tcl: explicit level argument. Bumped all version
	* doctoc.tcl: numbers by one patchlevel. doctools -> 1.3.2,
	* cvs.tcl: doctools::toc -> 0.3.1, doctools::idx -> 0.3.1,
	* changelog.tcl: doctools::cvs -> 0.1.2,
	* pkgIndex.tcl:  doctools::changelog -> 0.1.2
	* docidx.man:
	* doctoc.man:
	* doctools.man:
	* cvs.man:
	* changelog.man:

2007-09-25  Andreas Kupries  <andreask@activestate.com>

	* doctools.tcl: Extended processor to pass the pass number to the
	* checker.tcl: checker layer as well. Modified the checker layer
	* pkgIndex.tcl: to suppress generation of warnings in all but the
	* doctools.man: first pass, to avoid replication. Bumped version
	  to 1.3.1. This fixes [SF Tcllib Bug 1800413].

	* mpformats/fmt.nroff: Fixed argument swap in fmt_arg_def, fixing
	  [SF Tcllib Bug 1800420].
	
	* mpformats/fmt.html: Handled [SF Tcllib Bug 1800408] and [SF
	  Tcllib Bug 411], removing superfluous whitespace around link
	  text and adding more class names to semantic markup.

2007-09-20  Andreas Kupries  <andreask@activestate.com>

	* mpformats/fmt.html: Added closing of paragraphs per the request
	  in [SF Tcllib Bug 1798427]. Tis more complicated. Paragraphs
	  inside of list elements are not yet closed.

	* mpformats/fmt.html: Reworking handling of list items a bit to
	  properly close the dt, dd, and li tags. Requested by [SF Tcllib
	  Bug 1798427].

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-08-20  Andreas Kupries  <andreask@activestate.com>

	* doctools.tcl: Bumped versions to 1.3 and 0.3 respectively to
	* docidx.tcl:   reflect the extended syntax and bugfixes listed
	* doctoc.tcl:   below.
	* doctools.man:
	* docidx.man:
	* doctoc.man:
	* pkgIndex.tcl:

2007-08-02  Andreas Kupries  <andreask@activestate.com>
