@@ -1,3 +1,7 @@
+2008-03-12  Andreas Kupries  <andreask@activestate.com>
+
+	* checker.tcl (widget): Fixed bad call propagation.
+
 2008-03-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* doctools.tcl: Code cleanup, giving all upvar commands an
